src/objects/CB_Game_User__c.object
<CustomObject>
    <description>A user of City Builder Game</description>
    <fields>
        <fullName>CB_Allocated_Budget__c</fullName>
        <defaultValue>100000</defaultValue>
        <description>Budget Allocated to the User</description>
        <inlineHelpText>Budget Allocated to the User</inlineHelpText>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Blocks_Completed__c</fullName>
        <description>Count of the number of blocks completed by the user.</description>
        <inlineHelpText>Count of the number of blocks completed by the user.</inlineHelpText>
        <label>Blocks Completed</label>
        <summaryFilterItems>
            <field>CB_User_Block__c.CB_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CB_User_Block__c.CB_Game_User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CB_Budget__c</fullName>
        <description>Available Budget for the user to spend</description>
        <formula>CB_Allocated_Budget__c - CB_Total_Block_Cost__c +  CB_Total_Won__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Available Budget for the user to spend</inlineHelpText>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Level__c</fullName>
        <description>Level Reached by the user</description>
        <inlineHelpText>Level Reached by the user</inlineHelpText>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_Title__c</fullName>
        <defaultValue>&quot;City Janitor&quot;</defaultValue>
        <description>Title of the User in the Game</description>
        <inlineHelpText>Title of the User in the Game</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Total_Block_Cost__c</fullName>
        <description>Total Cost of the Block</description>
        <inlineHelpText>Total Cost of the Block</inlineHelpText>
        <label>Total Block Cost</label>
        <summarizedField>CB_Story_Answer__c.CB_Block_Cost__c</summarizedField>
        <summaryForeignKey>CB_Story_Answer__c.CB_Game_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CB_Total_Won__c</fullName>
        <description>Sum of all Amounts won by the user</description>
        <inlineHelpText>Sum of all Amounts won by the user</inlineHelpText>
        <label>Total Won</label>
        <summarizedField>CB_Story_Answer__c.CB_Won__c</summarizedField>
        <summaryForeignKey>CB_Story_Answer__c.CB_Game_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CB_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce User associated with the Game User</description>
        <inlineHelpText>Salesforce User associated with the Game User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Game_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Game User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>